kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expresssonarqube-app
  labels:
    app: expresssonarqube-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expresssonarqube-app
  template:
    metadata:
      labels:
        app: expresssonarqube-app
    spec:
      containers:
        - name: expresssonarqube-app
          image: votybe/expresssonarqube-app:latest
          ports:
            - containerPort: 3000
