kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expresssonarqube-service
spec:
  selector:
    app: expresssonarqube-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
