kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expresssonarqube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "209.38.185.24.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expresssonarqube-service
                port:
                  number: 80
